# mccfr_doudizhu

./: .gitignore
cfr/cfr/: CMakeLists.txt  InfoNode.hpp  Pluribus.cpp  Pluribus.hpp  State.cpp  State.hpp  card.cpp  cfr.sln  cfr.vcxproj  cfr.vcxproj.filters  env.cpp  env.h  interface.cpp  main.cpp  mctree.cpp  mctree.h  player.cpp
cfr/mct/: Pluribus.cpp  Pluribus.hpp  State.cpp  State.hpp  card.h  dllmain.cpp  env.h  interface.cpp  mct.vcxproj  mct.vcxproj.filters  mctree.cpp  mctree.h  player.h  slog.cpp
cfr/test_py/: cfr_test.py  run.bat  utils.py
cfr/test_py/scripts/: agents.py  envs.py  experiments.py  test.py  tools.py
doudizhu_deepcfr/: Policy.py  deepcfr.py  doudizhu.py  find_best.py  game.py  get_strategy.py  main.py  online_game.py  strategy_using.py  train.py
hagongda_code/: PolicyUsage.py  algorithms.py  doc.txt  doudizhu.py  game.py  main.py
